@@ -10,6 +10,7 @@ CHANGELOG
 * Public trek export : full width for information desk frame (fixes #856)
 * Public trek export : add footer with trek title and page numbers (fixes #861)
 * Fix point offset lost on path update (fixes #867)
+* Fix reconnect point topologies with offset to closest path (fixes #868)
 
 0.20.7 (2013-10-16)
 -------------------
